Jenkins-deploy/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: is-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - 
    http:
      paths: 
      - path: /jenkins(/|$)(.*)
        pathType: Prefix  
        backend:
          service:
            name: isservice
            port: 
              number: 8080
